<resources>
    <string name="app_name">UVCE Connect</string>
    <string name="facebook_app_id">125839481353081</string>
    <string name="fb_login_protocol_scheme">fb125839481353081</string>
    <string name="action_settings">Settings</string>
    <string name="Year">Year :</string>
    <string name="department">Department :</string>
    <string name="continue_to_be_removed_at_release">Continue(TO be removed at release)</string>
    <string name="PREF_FILE">APP_PRIF_FILE</string>
    <string name="LOGIN_TYPE">APP_LOGIN_TYPE</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_campus__says">Campus Says</string>
    <string name="arch">Architecture</string>
    <string name="cse">Computer Science and Engineering</string>
    <string name="ce">Civil Engineering</string>
    <string name="eee">Electronic and Electrical Engineering</string>
    <string name="ece">Electronics and Communication Engineering</string>
    <string name="ise">Information Science and Engineering</string>
    <string name="me">Mechanical Engineering</string>
    <string name="download">Download</string>
    <string-array name="branch_array">
        <item>@string/arch</item>
        <item>@string/cse</item>
        <item>@string/ce</item>
        <item>@string/ece</item>
        <item>@string/eee</item>
        <item>@string/ise</item>
        <item>@string/me</item>
    </string-array>
    <string-array name="semester_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="year_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="disclaimer">
        UVCE Connect has made honest effort to gather document from various departments.
        The validation of such documents may vary along with time.
        We appreciate users to contribute towards the same.
    </string>
    <string name="Note">
        <![CDATA[
        <p>
            <b> Note: </b>
            Downloaded file contains syllabus for both
            even and odd semester.
        </p>
        ]]>
    </string>
    <string name="title_activity_navigation_main">navigation_main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_asscociations">asscociations</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_associations">associations</string>
    <string name="title_activity_g2c2">g2c2</string>
    <string name="title_activity_news__adding">Add News</string>
    <string name="title_activity_campus__adding">Add Campus_Says</string>
    <string name="about_coll">UVCE was established in the year 1917, under the name, Government Engineering college by BharatRatna Sir M Visvesvaraya, and was affiliated to University of Mysore.It is the 5th Engineering College to be established in the country.after the formation of Bangalore University in 1964, UVCE became one of the constituent college of Bangalore University. This is one of the oldest technical institutions in the country, imparting technical education leading to B.E, M.E, B.Arch, M.Sc (Engineering) and Ph D degrees in the various disciplines of Engineering and Architecture. It has completed 93 years of academic excellence since its inception. This pioneer has grown many folds and has acquired a leading position in technical education and is rated among the top 15 Engineering colleges in the country situate at K R Circle and in the neighbourhood of Vidhana Soudha, Govt of Karnataka, the city campus is housing the Department of Mechanical Engineering, Department of Electrical Engineering. Department of Electronics Engineering and Department of Computer Science and Engineering. Proximity to city bus stand connects one easily to any part of the city. Amidst the Jnana Bharathi campus, the hub of Bangalore University, Post graduate Academic activities, the Engineering campus has departments of Civil Engineering and Architecture.  UVCE is recognized by the All India Council of Technical Education (AICTE) of the Govt of India and is a recipient of financial aid under World Bank’s Technical Education Quality Improvement Programme(TEQIP). UVCE has a NAAC rating of 5 Star for the past 4 consecutive years issued by the National Board of Accreditation. UVCE does not limit itself to being technically extravagant but also it is culturally diversified. The campus will be buzzing with activities all through the year, which provides opportunities to students to showcase their talent and prove their mettle in various genres. In a way, UVCE not only shapes the careers of its students but also makes them fit to face the real world challenges that are posed in the society. UVCE is witnessing even more positive improvements and is here to stay for very long time. The best part in UVCE has been the teacher-student partnership in achieving the missions and goals set. The students engross themselves enthusiastically and actively in the research work and gain knowledge before they venture either into the professional world or the teaching spectra. This facilitates the al round growth of any student here in the UVCE campus. Dr. Venugopal K. R. has been in Bangalore University for the last four decades. He has Eleven Degrees with Ph.D. in Computer Science Engineering from IIT-Madras, Chennai and another Ph.D. in Economics from Bangalore University. He has degrees in Law, Mass Communication, Electronics, Economics, Business Finance, Computer Science, Public Relations and Industrial Relations. He has authored and edited 64 books and published more than 600 papers in refereed International Journals and International Conferences. He has supervised 630 M.E. dissertations, 22 Ph.Ds and filed 101 Patents. He was a Post Doctoral Research Scholar and a visiting Professor at University of Southern California, USA. He has been conferred Fellow of IEEE, USA and ACM Distinguished Educator for contributions to Computer Science Engineering and Electrical Engineering Education.
    \t \t \t\t\t\t\t\t \t\t\t\t\tDr. Venugopal K R\n
B.E., M.A., D.J., L.L.B., B.S., D.P.R., M.B.F., D.I.R., M.E.,\n
Ph.D. (Computer Science), Ph.D. (Economics), FIEEE (USA)\n
ACM Distinguished Educator (USA)\n
Principal, University Visvesvaraya College of Engineering, Bangalore University, Bangalore\n
Special Officer, Government of Karnataka (December 2012 – June 2016)\n
\t \t\t\t\t\t\t\t\t\t\t\t \t\t\t\tFormer:\n
Dean, Faculty of Engineering, Member of Syndicate and Academic Council,\n
Professor, Department of Computer Science and Engineering,\n
University Visvesvaraya College of Engineering\nBangalore University, Bangalore – 560001.</string>
    <string name="title_activity_ieee">ieee</string>
    <string name="title_activity_academic">Academic</string>
    <string name="about_uvce">
        UVCE then called ‘College of Engineering’ was established at Bengaluru in 1917 just a year after the University of Mysore was established, giving a fillip to higher education and to enable the students of Mysore State to play their part in the Engineering field. \n\n

Initially, two branches of engineering namely, Civil and Mechanical Engineering were started. College of Engineering (UVCE) was the 5th Engineering College of the country and first in the Princely State of Mysore. \n\n

UVCE currently offers \n
1.	Seven Undergraduate (B.E / B.Arch) \n
2.	Twenty-Four Postgraduate (M.E / M.Arch.) \n
3.	Three Part time BE evening under graduate courses. \n
4.	M.Sc. (Engineering) by Research, \n
5.	Three-Year full time Ph.D., \n
6.	Four-Year part time Ph.D. programmes in all disciplines. \n
7.	Ph.D. (QIP) programme in Civil Engineering\n \n

The total intake of the college is about 1200 students a year.

    </string>
    <string name="about_po">
    Training and Placement Office is the power house of UVCE where, Student coordinators take the responsibility to interact with companies under the guidance of Placement Officer Dr. Thriveni. Placement Office was established in the year 1989, and has been consistently working as a liaison between the industry and students in order to fulfil the ambition of the students in getting the right job. \n\n
    About 90% of our students are placed in globally recognized companies with attractive offers. Batch of 2016 witnessed an all-time record of grabbing around 1060 offers.\n \n

    Email: info@campusuvce.in/  \n
    Contact:  +91 789903 7717 / 080-22276070 \n
    Website: http://campusuvce.in/ \n
    </string>
    <string name="about_g2c2">
        To accomplish the purpose of Clean and Green UVCE, a student led initiative, "Go Green and Clean Club" which is simply known as G2C2 was started in the year 2014 by a group of ME CSE department students. It is now run by enthusiasts from 2nd and 3rd year BE students. Presently it has about 100 voluntary members who are dedicated towards the cause. \n \n
Club aims to involve college faculty, alumni and larger number of students in future days to improve its effectiveness. \n \n

Email: gogreenuvce@gmail.com \n\n
Contact: Harsha S (9480281997) \n \n

    </string>
    <string name="about_vinimaya">
        Books are a collection of enormous amount of knowledge and guidance in a compressed form; it is a vital asset for the mankind. ‘VINIMAYA’ meaning ‘Sharing’ in Kannada, works on this very basic principle. Books that a student has can be shared with the club and the books that VINIMAYA has can be borrowed by the students. There\'s no worry if one doesn\'t have a book to share. \n \n
Wait it\’s not just books…! VINIMAYA also shares TV series, Anime, Movies, Ted Talks, E-Books for the one who seeks. Any student can drop into G2C2 room and borrow their favourite book, anime, movie, without any membership.  \n \n

Website: - http://aliengo.000webhostapp.com/first/vini2.0/vini2home.php \n \n
Contact: - Thanush (8867768009) \n


    </string>
    <string name="about_thathva">

        We are aware of the fact that RAMESH ARAVIND, DATTANNA, MANOHMURTHY are namma UVCE’s proud alumni who with their skills have created an everlasting impact on Kannada film industry.\n \n
UVCE’s leading collegiate Club which aims to improve one\'s skill in acting is Thathva. \n \n
Thathva was established by Abhishek Chakma from ECE batch of 2015. Currently Thathva consists of 60+ students involved in the activity. Members of Thathva took part in a street play ensemble called Manthan which took place in Forum mall, Kormangala. \n \n
The main objective is to \n \n
* Promote theatre in college \n
* Set up a platform for theatre enthusiasts\n
* To collaborate and do what they love \n\n
Contact: Darshan (8867362582)


    </string>
    <string name="search_name">Search by name</string>
    <string name="search">Search</string>
    <string name="search_by_phone">Search by phone</string>
    <string name="sort_by_key">Sort by key</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
</resources>