<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search_item"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always">

    </item>

    <item
        android:id="@+id/menu_search_name"
        android:title="@string/search_name"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/menu_search_phone"
        android:title="@string/search_by_phone"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/menu_sort_key"
        android:title="@string/sort_by_key"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/menu_sort_az"
        android:title="@string/sort_alphabetically"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        app:showAsAction="ifRoom">

    </item>

</menu>