<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.venkibellu.myapplication.AcademicActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="36dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/branchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/department"
        android:textColor="@android:color/black"
        android:textAlignment="viewEnd"
        android:textSize="24sp"/>


    <Spinner
        android:id="@+id/branchSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="70dp"
        android:layout_gravity="center"
        android:dropDownWidth="match_parent"
        android:entries="@array/branch_array">
    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/yearTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Year"
            android:textColor="@android:color/black"
            android:textSize="24sp"/>

        <Spinner
            android:id="@+id/yearSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:dropDownWidth="50dp"
            android:entries="@array/year_array">
    </Spinner>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/download"
        android:textAllCaps="false"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:onClick="downloadButtonClicked"/>

</LinearLayout>